-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.14.0, Lustre 2.12.5
-
3
-
9223372036854775807
I created a subdirectory and put a mirrored file in it. When I tried to migrate the mirrored file to another MDT, it returned an error migrating the mirrored file that I didn't expect:
tests# lfs mkdir -i 0 /mnt/testfs/dir1 tests# cp /etc/hosts /mnt/testfs/dir1 tests# lfs mirror extend -N1 /mnt/testfs/dir1/hosts tests# lfs migrate -m 1 /mnt/testfs/dir1 lfs migrate: /mnt/testfs/dir1/hosts migrate failed: Operation not supported (95) tests# lfs getstripe -m /mnt/testfs/dir1 1 tests# lfs getstripe -m /mnt/testfs/dir1/hosts 0
So it seems like the directory was migrated, but the mirrored file was not. Is there some reason that the mirrored file could not be migrated? I don't think that should be any different than migrating some other composite file.